# closeio

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
closeio/: __init__.py  closeio.py  conf.py  exceptions.py  signals.py  urls.py  utils.py  views.py
closeio/contrib/: pytest_plugin.py  testing_stub.py
closeio/contrib/django/: signals.py  urls.py  utils.py  views.py
closeio/models/: __init__.py  decorators.py  manager.py
docs/: conf.py  index.rst  installation.rst  usage.rst
tests/: test_closeio.py  test_end_to_end.py  test_exceptions.py  test_testing_stub.py  test_utils.py
tests/djangoapp/: conftest.py  test_utils.py  test_webhook.py  urls.py
tests/fixtures/: call.json  email.json  lead.json  opportunity.json  task.json
tests/testapp/: closeio  settings.py  urls.py
tests/testapp/app/: models.py  tests.py  urls.py
