[metadata]
name = faster_closeio
author = Thermondo GmbH
author-email = opensource@thermondo.de
summary = Slim API wrapper to access close.io CRM.
description-file = README.rst
home-page = https://github.com/Thermondo/closeio
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Framework :: Django

[files]
packages =
    closeio

[entry_points]
pytest11 =
    closeio = closeio.contrib.pytest_plugin

[wheel]
universal = 1

[pytest]
norecursedirs=env .git venv
addopts = --tb=short -rxs
pep8maxlinelength=99
pep8ignore=
    runtests.py ALL
flakes-ignore=
    runtests.py ALL

[flake8]
max-line-length = 99
max-complexity = 10
statistics = true
show-source = true
exclude = */migrations/*,docs/*,env/*

[pycodestyle]
max-line-length = 99
statistics = true
show-source = true
exclude = */migrations/*,docs/*,env/*

[pydocstyle]
add-ignore = D100,D101,D102,D103,D104,D105,D106,D107

[coverage:run]
source = .
omit =
  */migrations/*
  */tests/*
  */test_*.py

[coverage:report]
ignore_errors = True
show_missing = True

[isort]
atomic = true
multi_line_output = 5
line_length = 79
combine_as_imports = true
known_first_party =  closeio,tests
known_third_party = django
skip = wsgi.py,docs,env
