[metadata]
name = faster_closeio
author = Thermondo GmbH
author-email = opensource@thermondo.de
summary = Slim API wrapper to access close.io CRM.
description-file = README.rst
home-page = https://github.com/Thermondo/closeio
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Framework :: Django

[files]
packages =
    closeio

[entry_points]
pytest11 =
    closeio = closeio.contrib.pytest_plugin

[tool:pytest]
norecursedirs=env .git venv .eggs
addopts = --tb=short -rxs
pep8maxlinelength=99
pep8ignore=
    runtests.py ALL
flakes-ignore=
    runtests.py ALL

[extras]
django =
    django>=1.11

[aliases]
test = pytest

[pycodestyle]
max-line-length = 99
statistics = true
show-source = true
exclude = */migrations/*,docs/*,env/*

[pydocstyle]
add-ignore = D1

[coverage:run]
source = .
omit =
  */migrations/*
  */tests/*
  */test_*.py

[coverage:report]
ignore_errors = True
show_missing = True

[isort]
atomic = true
multi_line_output = 5
line_length = 79
combine_as_imports = true
known_first_party =  closeio,tests
known_third_party = dateutil,django,pytest,six,slumber
skip = wsgi.py,docs,env,.eggs
